<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_current_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="Current Tours"
                android:textColor="#EEEEEE"
                android:background="@color/colorPrimary"
                android:textAllCaps="false" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/personal_current_tours_srl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personal_current_tours_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="4dp"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:visibility="invisible" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/personal_current_tours_loading_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/personal_current_tours_future_loading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading Current Tours"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        android:layout_marginBottom="20dp" />

                    <ProgressBar
                        android:id="@+id/personal_current_loading_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_future_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:text="Future Tours"
                android:textColor="#EEEEEE"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@color/colorPrimary"
                app:drawableRightCompat="@drawable/ic_baseline_add_24"
                android:drawablePadding="10dip"
                android:paddingLeft="55dp"
                android:paddingRight="15dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/personal_future_tours_srl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personal_future_tours_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="4dp"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:visibility="invisible" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/personal_future_tours_loading_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/personal_future_tours_future_loading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading Future Tours"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        android:layout_marginBottom="20dp" />

                    <ProgressBar
                        android:id="@+id/personal_tours_loading_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_past_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:text="Past Tours"
                android:textColor="#EEEEEE"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/personal_past_tours_srl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personal_past_tours_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="4dp"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:paddingBottom="8dp"
                        android:visibility="invisible" />

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/personal_past_tours_loading_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/personal_past_tours_loading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading Past Tours"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp"
                        android:layout_marginBottom="20dp" />

                    <ProgressBar
                        android:id="@+id/personal_past_tours_loading_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>